--- a/notebooks/cnn_customdata_basic.ipynb
+++ b/notebooks/cnn_customdata_basic.ipynb
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "scrolled": false
@@ -241,40 +241,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch: 000/400 cost: 5.615976334\n",
+      "Epoch: 000/400 cost: 10.054866600\n",
       " Training accuracy: 0.750\n",
-      " Test accuracy: 0.784\n",
-      "Epoch: 040/400 cost: 2.005251551\n",
-      " Training accuracy: 0.990\n",
-      " Test accuracy: 0.883\n",
-      "Epoch: 080/400 cost: 1.745222092\n",
+      " Test accuracy: 0.755\n",
+      "Epoch: 040/400 cost: 2.086551237\n",
+      " Training accuracy: 0.980\n",
+      " Test accuracy: 0.901\n",
+      "Epoch: 080/400 cost: 1.829108810\n",
       " Training accuracy: 1.000\n",
-      " Test accuracy: 0.919\n",
-      "Epoch: 120/400 cost: 1.550463128\n",
-      " Training accuracy: 1.000\n",
-      " Test accuracy: 0.908\n",
-      "Epoch: 160/400 cost: 1.376381826\n",
-      " Training accuracy: 1.000\n",
-      " Test accuracy: 0.916\n",
-      "Epoch: 200/400 cost: 1.221208858\n",
-      " Training accuracy: 1.000\n",
-      " Test accuracy: 0.923\n",
-      "Epoch: 240/400 cost: 1.083157134\n",
-      " Training accuracy: 1.000\n",
-      " Test accuracy: 0.923\n",
-      "Epoch: 280/400 cost: 0.959625387\n",
-      " Training accuracy: 1.000\n",
-      " Test accuracy: 0.945\n",
-      "Epoch: 320/400 cost: 0.849428809\n",
-      " Training accuracy: 1.000\n",
-      " Test accuracy: 0.919\n",
-      "Epoch: 360/400 cost: 0.750081146\n",
-      " Training accuracy: 1.000\n",
-      " Test accuracy: 0.930\n",
-      "Epoch: 399/400 cost: 0.663308442\n",
-      " Training accuracy: 1.000\n",
-      " Test accuracy: 0.938\n",
-      "Optimization Finished!\n"
+      " Test accuracy: 0.930\n"
      ]
     }
    ],
@@ -328,19 +303,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Session closed.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "sess.close()\n",
     "print (\"Session closed.\")"
