--- a/notebooks/mlp_mnist_deeper.ipynb
+++ b/notebooks/mlp_mnist_deeper.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## DEEPER MULTILAYER PERCEPTRON WITH DROPOUT"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
@@ -8,15 +15,18 @@
    },
    "outputs": [],
    "source": [
-    "\"\"\"\n",
-    " Deeper Multi-Layer Pecptron with MNIST\n",
-    " @Sungjoon Choi (sungjoon.choi@cpslab.snu.ac.kr)\n",
-    "\"\"\"\n",
     "import numpy as np\n",
     "import tensorflow as tf\n",
     "import matplotlib.pyplot as plt\n",
     "from tensorflow.examples.tutorials.mnist import input_data\n",
     "%matplotlib inline  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# LOAD MNIST"
    ]
   },
   {
@@ -42,6 +52,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# DEFINE MODEL"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {
@@ -52,118 +69,61 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Network Ready\n"
+      "NETWORK READY\n"
      ]
     }
    ],
    "source": [
-    "# Parameters\n",
-    "learning_rate   = 0.001\n",
-    "training_epochs = 5\n",
-    "batch_size      = 100\n",
-    "display_step    = 1\n",
-    "\n",
-    "# Network Parameters\n",
+    "# NETWORK TOPOLOGIES\n",
     "n_input    = 784 # MNIST data input (img shape: 28*28)\n",
-    "n_hidden_1 = 256 # 1st layer num features\n",
-    "n_hidden_2 = 256 # 2nd layer num features\n",
+    "n_hidden_1 = 512 # 1st layer num features\n",
+    "n_hidden_2 = 512 # 2nd layer num features\n",
     "n_hidden_3 = 256 # 3rd layer num features\n",
-    "n_hidden_4 = 256 # 4th layer num features\n",
     "n_classes  = 10 # MNIST total classes (0-9 digits)\n",
-    "# tf Graph input\n",
+    "# INPUT AND OUTPUT\n",
     "x = tf.placeholder(\"float\", [None, n_input])\n",
     "y = tf.placeholder(\"float\", [None, n_classes])\n",
     "dropout_keep_prob = tf.placeholder(\"float\")\n",
-    "# Create model\n",
-    "def multilayer_perceptron(_X, _weights, _biases, _keep_prob):\n",
-    "    layer_1 = tf.nn.dropout(tf.nn.relu(tf.add(tf.matmul(_X, _weights['h1']), _biases['b1'])), _keep_prob)\n",
-    "    layer_2 = tf.nn.dropout(tf.nn.relu(tf.add(tf.matmul(layer_1, _weights['h2']), _biases['b2'])), _keep_prob)\n",
-    "    layer_3 = tf.nn.dropout(tf.nn.relu(tf.add(tf.matmul(layer_2, _weights['h3']), _biases['b3'])), _keep_prob) \n",
-    "    layer_4 = tf.nn.dropout(tf.nn.relu(tf.add(tf.matmul(layer_3, _weights['h4']), _biases['b4'])), _keep_prob) \n",
-    "    return (tf.matmul(layer_4, _weights['out']) + _biases['out'])\n",
-    "# Store layers weight & bias\n",
-    "stddev = 0.1\n",
+    "# VARIABLES\n",
+    "stddev = 0.05\n",
     "weights = {\n",
     "    'h1': tf.Variable(tf.random_normal([n_input, n_hidden_1], stddev=stddev)),\n",
     "    'h2': tf.Variable(tf.random_normal([n_hidden_1, n_hidden_2], stddev=stddev)),\n",
     "    'h3': tf.Variable(tf.random_normal([n_hidden_2, n_hidden_3], stddev=stddev)),\n",
-    "    'h4': tf.Variable(tf.random_normal([n_hidden_3, n_hidden_4], stddev=stddev)),\n",
-    "    'out': tf.Variable(tf.random_normal([n_hidden_4, n_classes], stddev=stddev))\n",
+    "    'out': tf.Variable(tf.random_normal([n_hidden_3, n_classes], stddev=stddev))\n",
     "}\n",
     "biases = {\n",
     "    'b1': tf.Variable(tf.random_normal([n_hidden_1])),\n",
     "    'b2': tf.Variable(tf.random_normal([n_hidden_2])),\n",
     "    'b3': tf.Variable(tf.random_normal([n_hidden_3])),\n",
-    "    'b4': tf.Variable(tf.random_normal([n_hidden_4])),\n",
     "    'out': tf.Variable(tf.random_normal([n_classes]))\n",
     "}\n",
-    "# Construct model\n",
-    "pred = multilayer_perceptron(x, weights, biases, dropout_keep_prob)\n",
-    "\n",
-    "# Define loss and optimizer\n",
-    "cost = tf.reduce_mean(tf.nn.softmax_cross_entropy_with_logits(pred, y)) # Softmax loss\n",
-    "optimizer = tf.train.AdamOptimizer(learning_rate=learning_rate).minimize(cost) # Adam Optimizer\n",
-    "# optimizer = tf.train.MomentumOptimizer(learning_rate=learning_rate, momentum=0.8).minimize(cost) # Adam Optimizer\n",
-    "\n",
-    "# Accuracy \n",
-    "correct_prediction = tf.equal(tf.argmax(pred, 1), tf.argmax(y, 1))\n",
-    "accuracy = tf.reduce_mean(tf.cast(correct_prediction, \"float\"))\n",
-    "\n",
-    "# Initializing the variables\n",
-    "init = tf.initialize_all_variables()\n",
-    "\n",
-    "print (\"Network Ready\")"
+    "print (\"NETWORK READY\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {
-    "collapsed": false,
-    "scrolled": true
+    "collapsed": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch: 000/005 cost: 0.492509549\n",
-      "Training accuracy: 0.970\n",
-      "Epoch: 001/005 cost: 0.164728719\n",
-      "Training accuracy: 0.980\n",
-      "Epoch: 002/005 cost: 0.115592619\n",
-      "Training accuracy: 0.960\n",
-      "Epoch: 003/005 cost: 0.089726410\n",
-      "Training accuracy: 0.970\n",
-      "Epoch: 004/005 cost: 0.072548915\n",
-      "Training accuracy: 0.950\n",
-      "Optimization Finished!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# Launch the graph\n",
-    "sess = tf.Session()\n",
-    "sess.run(init)\n",
-    "\n",
-    "# Training cycle\n",
-    "for epoch in range(training_epochs):\n",
-    "    avg_cost = 0.\n",
-    "    total_batch = int(mnist.train.num_examples/batch_size)\n",
-    "    # Loop over all batches\n",
-    "    for i in range(total_batch):\n",
-    "        batch_xs, batch_ys = mnist.train.next_batch(batch_size)\n",
-    "        # Fit training using batch data\n",
-    "        sess.run(optimizer, feed_dict={x: batch_xs, y: batch_ys, dropout_keep_prob: 0.7})\n",
-    "        # Compute average loss\n",
-    "        avg_cost += sess.run(cost, feed_dict={x: batch_xs, y: batch_ys, dropout_keep_prob:1.})/total_batch\n",
-    "    # Display logs per epoch step\n",
-    "    if epoch % display_step == 0:\n",
-    "        print (\"Epoch: %03d/%03d cost: %.9f\" % (epoch, training_epochs, avg_cost))\n",
-    "        train_acc = sess.run(accuracy, feed_dict={x: batch_xs, y: batch_ys, dropout_keep_prob:1.})\n",
-    "        print (\"Training accuracy: %.3f\" % (train_acc))\n",
-    "\n",
-    "print (\"Optimization Finished!\")"
+    "def multilayer_perceptron(_X, _weights, _biases, _keep_prob):\n",
+    "    x_1 = tf.nn.relu(tf.add(tf.matmul(_X, _weights['h1']), _biases['b1']))\n",
+    "    layer_1 = x_1\n",
+    "    x_2 = tf.nn.relu(tf.add(tf.matmul(layer_1, _weights['h2']), _biases['b2']))\n",
+    "    layer_2 = x_2\n",
+    "    x_3 = tf.nn.relu(tf.add(tf.matmul(layer_2, _weights['h3']), _biases['b3']))\n",
+    "    layer_3 = tf.nn.dropout(x_3, _keep_prob) \n",
+    "    return (tf.matmul(layer_3, _weights['out']) + _biases['out'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# DEFINE FUNCTIONS"
    ]
   },
   {
@@ -177,13 +137,93 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Training accuracy: 0.971\n"
+      "FUNCTIONS READY\n"
      ]
     }
    ],
    "source": [
-    "test_acc = sess.run(accuracy, feed_dict={x: mnist.test.images, y: mnist.test.labels, dropout_keep_prob:1.})\n",
-    "print (\"Test accuracy: %.3f\" % (test_acc))"
+    "# PREDICTION\n",
+    "pred = multilayer_perceptron(x, weights, biases, dropout_keep_prob)\n",
+    "\n",
+    "# LOSS AND OPTIMIZER\n",
+    "cost = tf.reduce_mean(tf.nn.softmax_cross_entropy_with_logits(pred, y)) \n",
+    "optm = tf.train.AdamOptimizer(learning_rate=0.001).minimize(cost) \n",
+    "corr = tf.equal(tf.argmax(pred, 1), tf.argmax(y, 1))    \n",
+    "accr = tf.reduce_mean(tf.cast(corr, \"float\"))\n",
+    "\n",
+    "# INITIALIZER\n",
+    "init = tf.initialize_all_variables()\n",
+    "print (\"FUNCTIONS READY\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# RUN"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": false,
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch: 003/020 cost: 0.031996857\n",
+      "TRAIN ACCURACY: 1.000\n",
+      "TEST ACCURACY: 0.975\n",
+      "Epoch: 007/020 cost: 0.009672010\n",
+      "TRAIN ACCURACY: 1.000\n",
+      "TEST ACCURACY: 0.977\n",
+      "Epoch: 011/020 cost: 0.004559030\n",
+      "TRAIN ACCURACY: 0.990\n",
+      "TEST ACCURACY: 0.979\n",
+      "Epoch: 015/020 cost: 0.003751091\n",
+      "TRAIN ACCURACY: 1.000\n",
+      "TEST ACCURACY: 0.980\n",
+      "Epoch: 019/020 cost: 0.002512690\n",
+      "TRAIN ACCURACY: 1.000\n",
+      "TEST ACCURACY: 0.982\n",
+      "OPTIMIZATION FINISHED\n"
+     ]
+    }
+   ],
+   "source": [
+    "# PARAMETERS\n",
+    "training_epochs = 20\n",
+    "batch_size      = 100\n",
+    "display_step    = 4\n",
+    "# LAUNCH THE GRAPH\n",
+    "sess = tf.Session()\n",
+    "sess.run(init)\n",
+    "# OPTIMIZE\n",
+    "for epoch in range(training_epochs):\n",
+    "    avg_cost = 0.\n",
+    "    total_batch = int(mnist.train.num_examples/batch_size)\n",
+    "    # ITERATION\n",
+    "    for i in range(total_batch):\n",
+    "        batch_xs, batch_ys = mnist.train.next_batch(batch_size)\n",
+    "        feeds = {x: batch_xs, y: batch_ys, dropout_keep_prob: 0.6}\n",
+    "        sess.run(optm, feed_dict=feeds)\n",
+    "        feeds = {x: batch_xs, y: batch_ys, dropout_keep_prob: 1.0}\n",
+    "        avg_cost += sess.run(cost, feed_dict=feeds)\n",
+    "    avg_cost = avg_cost / total_batch\n",
+    "    # DISPLAY\n",
+    "    if (epoch+1) % display_step == 0:\n",
+    "        print (\"Epoch: %03d/%03d cost: %.9f\" % (epoch, training_epochs, avg_cost))\n",
+    "        feeds = {x: batch_xs, y: batch_ys, dropout_keep_prob: 1.0}\n",
+    "        train_acc = sess.run(accr, feed_dict=feeds)\n",
+    "        print (\"TRAIN ACCURACY: %.3f\" % (train_acc))\n",
+    "        feeds = {x: mnist.test.images, y: mnist.test.labels, dropout_keep_prob: 1.0}\n",
+    "        test_acc = sess.run(accr, feed_dict=feeds)\n",
+    "        print (\"TEST ACCURACY: %.3f\" % (test_acc))\n",
+    "print (\"OPTIMIZATION FINISHED\")"
    ]
   }
  ],
