--- a/notebooks/mlp_mnist_simple.ipynb
+++ b/notebooks/mlp_mnist_simple.ipynb
@@ -27,7 +27,6 @@
     "import tensorflow as tf\n",
     "import matplotlib.pyplot as plt\n",
     "from tensorflow.examples.tutorials.mnist import input_data\n",
-    "\n",
     "%matplotlib inline  \n",
     "print (\"PACKAGES LOADED\")"
    ]
@@ -84,12 +83,6 @@
     }
    ],
    "source": [
-    "# PARAMETERS\n",
-    "learning_rate   = 0.001\n",
-    "training_epochs = 10\n",
-    "batch_size      = 100\n",
-    "display_step    = 1\n",
-    "\n",
     "# NETWORK TOPOLOGIES\n",
     "n_hidden_1 = 256 \n",
     "n_hidden_2 = 128 \n",
@@ -99,12 +92,6 @@
     "# INPUTS AND OUTPUTS\n",
     "x = tf.placeholder(\"float\", [None, n_input])\n",
     "y = tf.placeholder(\"float\", [None, n_classes])\n",
-    "\n",
-    "# MLP MODEL\n",
-    "def multilayer_perceptron(_X, _weights, _biases):\n",
-    "    layer_1 = tf.nn.sigmoid(tf.add(tf.matmul(_X, _weights['h1']), _biases['b1'])) \n",
-    "    layer_2 = tf.nn.sigmoid(tf.add(tf.matmul(layer_1, _weights['h2']), _biases['b2']))\n",
-    "    return (tf.matmul(layer_2, _weights['out']) + _biases['out'])\n",
     "    \n",
     "# NETWORK PARAMETERS\n",
     "stddev = 0.1\n",
@@ -125,12 +112,33 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# DEFINE FUNCTIONS"
+    "# MLP AS A FUNCTION"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def multilayer_perceptron(_X, _weights, _biases):\n",
+    "    layer_1 = tf.nn.sigmoid(tf.add(tf.matmul(_X, _weights['h1']), _biases['b1'])) \n",
+    "    layer_2 = tf.nn.sigmoid(tf.add(tf.matmul(layer_1, _weights['h2']), _biases['b2']))\n",
+    "    return (tf.matmul(layer_2, _weights['out']) + _biases['out'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# DEFINE FUNCTIONS"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -148,8 +156,9 @@
     "pred = multilayer_perceptron(x, weights, biases)\n",
     "\n",
     "# LOSS AND OPTIMIZER\n",
-    "cost = tf.reduce_mean(tf.nn.softmax_cross_entropy_with_logits(pred, y)) # Softmax loss\n",
-    "optm = tf.train.AdamOptimizer(learning_rate=learning_rate).minimize(cost) # Adam Optimizer\n",
+    "cost = tf.reduce_mean(tf.nn.softmax_cross_entropy_with_logits(pred, y)) \n",
+    "# optm = tf.train.GradientDescentOptimizer(learning_rate=0.001).minimize(cost) \n",
+    "optm = tf.train.AdamOptimizer(learning_rate=0.001).minimize(cost) \n",
     "corr = tf.equal(tf.argmax(pred, 1), tf.argmax(y, 1))    \n",
     "accr = tf.reduce_mean(tf.cast(corr, \"float\"))\n",
     "\n",
@@ -167,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false,
     "scrolled": false
@@ -177,45 +186,33 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch: 000/010 cost: 0.596429837\n",
-      "TRAIN ACCURACY: 0.940\n",
-      "TEST ACCURACY: 0.920\n",
-      "Epoch: 001/010 cost: 0.222249557\n",
-      "TRAIN ACCURACY: 0.940\n",
-      "TEST ACCURACY: 0.943\n",
-      "Epoch: 002/010 cost: 0.161496330\n",
-      "TRAIN ACCURACY: 0.990\n",
-      "TEST ACCURACY: 0.955\n",
-      "Epoch: 003/010 cost: 0.123577177\n",
-      "TRAIN ACCURACY: 0.970\n",
+      "Epoch: 003/020 cost: 0.124787590\n",
+      "TRAIN ACCURACY: 0.960\n",
       "TEST ACCURACY: 0.961\n",
-      "Epoch: 004/010 cost: 0.096525699\n",
+      "Epoch: 007/020 cost: 0.050386614\n",
       "TRAIN ACCURACY: 0.970\n",
-      "TEST ACCURACY: 0.969\n",
-      "Epoch: 005/010 cost: 0.076882775\n",
-      "TRAIN ACCURACY: 0.970\n",
-      "TEST ACCURACY: 0.972\n",
-      "Epoch: 006/010 cost: 0.061825395\n",
-      "TRAIN ACCURACY: 0.990\n",
-      "TEST ACCURACY: 0.974\n",
-      "Epoch: 007/010 cost: 0.049537351\n",
+      "TEST ACCURACY: 0.975\n",
+      "Epoch: 011/020 cost: 0.019682230\n",
       "TRAIN ACCURACY: 1.000\n",
-      "TEST ACCURACY: 0.976\n",
-      "Epoch: 008/010 cost: 0.039864310\n",
+      "TEST ACCURACY: 0.979\n",
+      "Epoch: 015/020 cost: 0.007102341\n",
       "TRAIN ACCURACY: 1.000\n",
-      "TEST ACCURACY: 0.977\n",
-      "Epoch: 009/010 cost: 0.032231958\n",
-      "TRAIN ACCURACY: 0.980\n",
-      "TEST ACCURACY: 0.978\n",
+      "TEST ACCURACY: 0.979\n",
+      "Epoch: 019/020 cost: 0.002848990\n",
+      "TRAIN ACCURACY: 1.000\n",
+      "TEST ACCURACY: 0.979\n",
       "OPTIMIZATION FINISHED\n"
      ]
     }
    ],
    "source": [
+    "# PARAMETERS\n",
+    "training_epochs = 20\n",
+    "batch_size      = 100\n",
+    "display_step    = 4\n",
     "# LAUNCH THE GRAPH\n",
     "sess = tf.Session()\n",
     "sess.run(init)\n",
-    "\n",
     "# OPTIMIZE\n",
     "for epoch in range(training_epochs):\n",
     "    avg_cost = 0.\n",
@@ -223,38 +220,20 @@
     "    # ITERATION\n",
     "    for i in range(total_batch):\n",
     "        batch_xs, batch_ys = mnist.train.next_batch(batch_size)\n",
-    "        sess.run(optm, feed_dict={x: batch_xs, y: batch_ys})\n",
-    "        avg_cost += sess.run(cost, feed_dict={x: batch_xs, y: batch_ys})/total_batch\n",
-    "    \n",
+    "        feeds = {x: batch_xs, y: batch_ys}\n",
+    "        sess.run(optm, feed_dict=feeds)\n",
+    "        avg_cost += sess.run(cost, feed_dict=feeds)\n",
+    "    avg_cost = avg_cost / total_batch\n",
     "    # DISPLAY\n",
-    "    if epoch % display_step == 0:\n",
+    "    if (epoch+1) % display_step == 0:\n",
     "        print (\"Epoch: %03d/%03d cost: %.9f\" % (epoch, training_epochs, avg_cost))\n",
-    "        train_acc = sess.run(accr, feed_dict={x: batch_xs, y: batch_ys})\n",
+    "        feeds = {x: batch_xs, y: batch_ys}\n",
+    "        train_acc = sess.run(accr, feed_dict=feeds)\n",
     "        print (\"TRAIN ACCURACY: %.3f\" % (train_acc))\n",
-    "        test_acc = sess.run(accr, feed_dict={x: mnist.test.images, y: mnist.test.labels})\n",
+    "        feeds = {x: mnist.test.images, y: mnist.test.labels}\n",
+    "        test_acc = sess.run(accr, feed_dict=feeds)\n",
     "        print (\"TEST ACCURACY: %.3f\" % (test_acc))\n",
-    "\n",
     "print (\"OPTIMIZATION FINISHED\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "TRAIN ACCURACY: 0.978\n"
-     ]
-    }
-   ],
-   "source": [
-    "test_acc = sess.run(accr, feed_dict={x: mnist.test.images, y: mnist.test.labels})\n",
-    "print (\"TRAIN ACCURACY: %.3f\" % (test_acc))"
    ]
   }
  ],
