--- a/notebooks/basic_gendataset.ipynb
+++ b/notebooks/basic_gendataset.ipynb
@@ -423,7 +423,8 @@
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": true
    },
    "outputs": [
     {
