upgrade to Tensorflow 1.0 change hangul parser from hangulpy to hgtk

--- a/notebooks/char_rnn_sample_tutorial.ipynb
+++ b/notebooks/char_rnn_sample_tutorial.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -23,13 +23,14 @@
     "import argparse\n",
     "import time\n",
     "import os\n",
-    "from six.moves import cPickle\n",
+    "#from six.moves import cPickle\n",
+    "import pickle\n",
     "print (\"Packages Imported\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -38,7 +39,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "'vocab_size' is 99\n"
+      "'vocab_size' is 98\n"
      ]
     }
    ],
@@ -46,7 +47,7 @@
     "# Load chars and vocab\n",
     "load_dir = \"data/linux_kernel\"\n",
     "with open(os.path.join(load_dir, 'chars_vocab.pkl'), 'rb') as f:\n",
-    "    chars, vocab = cPickle.load(f)\n",
+    "    chars, vocab = pickle.load(f, errors='ignore')\n",
     "vocab_size = len(vocab) \n",
     "print (\"'vocab_size' is %d\" % (vocab_size))"
    ]
@@ -61,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -82,27 +83,27 @@
     "batch_size = 1 # <= In the training phase, these were both 50\n",
     "seq_length = 1\n",
     "\n",
+    "tf.reset_default_graph()\n",
+    "\n",
     "# Construct RNN model \n",
-    "unitcell   = tf.nn.rnn_cell.BasicLSTMCell(rnn_size)\n",
-    "cell       = tf.nn.rnn_cell.MultiRNNCell([unitcell] * num_layers)\n",
+    "unitcell   = tf.contrib.rnn.BasicLSTMCell(rnn_size)\n",
+    "cell       = tf.contrib.rnn.MultiRNNCell([unitcell] * num_layers)\n",
     "input_data = tf.placeholder(tf.int32, [batch_size, seq_length])\n",
     "istate     = cell.zero_state(batch_size, tf.float32)\n",
+    "\n",
     "# Weigths \n",
     "with tf.variable_scope('rnnlm'):\n",
     "    softmax_w = tf.get_variable(\"softmax_w\", [rnn_size, vocab_size])\n",
     "    softmax_b = tf.get_variable(\"softmax_b\", [vocab_size])\n",
+    "    \n",
     "    with tf.device(\"/cpu:0\"):\n",
     "        embedding = tf.get_variable(\"embedding\", [vocab_size, rnn_size])\n",
-    "        inputs = tf.split(1, seq_length, tf.nn.embedding_lookup(embedding, input_data))\n",
+    "        inputs = tf.split( tf.nn.embedding_lookup(embedding, input_data), seq_length, 1)\n",
     "        inputs = [tf.squeeze(_input, [1]) for _input in inputs]\n",
-    "# Output\n",
-    "def loop(prev, _):\n",
-    "    prev = tf.nn.xw_plus_b(prev, softmax_w, softmax_b)\n",
-    "    prev_symbol = tf.stop_gradient(tf.argmax(prev, 1))\n",
-    "    return tf.nn.embedding_lookup(embedding, prev_symbol)\n",
-    "outputs, final_state = seq2seq.rnn_decoder(inputs, istate, cell\n",
+    "        \n",
+    "outputs, final_state = tf.contrib.legacy_seq2seq.rnn_decoder(inputs, istate, cell\n",
     "                                          , loop_function=None, scope='rnnlm')\n",
-    "output = tf.reshape(tf.concat(1, outputs), [-1, rnn_size])\n",
+    "output = tf.reshape(tf.concat_v2(outputs,1 ), [-1, rnn_size])\n",
     "\n",
     "logits = tf.nn.xw_plus_b(output, softmax_w, softmax_b)\n",
     "probs  = tf.nn.softmax(logits)\n",
@@ -112,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -121,15 +122,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "data/linux_kernel/model.ckpt-8000\n"
+      "data/linux_kernel/model.ckpt-0\n"
      ]
     }
    ],
    "source": [
     "# Restore RNN\n",
     "sess = tf.Session()\n",
-    "sess.run(tf.initialize_all_variables())\n",
-    "saver = tf.train.Saver(tf.all_variables())\n",
+    "sess.run(tf.global_variables_initializer())\n",
+    "saver = tf.train.Saver(tf.global_variables())\n",
     "ckpt  = tf.train.get_checkpoint_state(load_dir)\n",
     "\n",
     "print (ckpt.model_checkpoint_path)\n",
@@ -145,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -157,54 +158,16 @@
       "Sampling Done. \n",
       "___________________________________________\n",
       "\n",
-      "/*  :  A C. Fruemptly etweennars must be serversed */\n",
-      "static int __cgroup_hash_power(struct rt_mutex_d *uaddr, int watab, long\n",
-      "-XIT_PYS__AUTIMER_PAT(seed_class_table_watch, v1->curr);\n",
-      "}\n",
-      "\n",
-      "static void down_cpusets(struct pid;\n",
-      "static int pid_thread(voids_mm)\n",
-      "{\n",
-      "\tif (ps->cpumainte_to_cgroup_grp <= NULL)\n",
-      "\t\treturn 0;\n",
-      "}\n",
-      "\n",
-      "conset sched_VRICE_SOFTIRQ_DISU{\n",
-      "\tsoftirq_signal(this_css_set_bytes));\n",
-      "}\n",
-      "\n",
-      "void private = {\n",
-      "\t\t.mode\t\t= CPUCLOCK_BALANCE,\n",
-      "\t\t.process\t\t= optime)\n",
-      "\n",
-      "/*\n",
-      " * The are\n",
-      " *\ten\n",
-      " * @buf' - for so allows the condext it of it regions)\n",
-      " * massessiging that   Sto be stime in the expoxes\n",
-      " */\n",
-      "void __fsix;\n",
-      "\tstruct audit_chunk *tsk;\n",
-      "\n",
-      "\tkey_utvec_oper(struct *read_ns, struct futex_ckernel);\n",
-      "\tint atomic_attime = res->init_switch(void),\n",
-      "\t\t\t    -+signal->state = 0;\n",
-      "\ttmr = tmp;\n",
-      "\tprintk(\"%s\\n\", signal, &max_huts_string, 1, look_t *)(modemask++);\n",
-      "\tup_sem(cft, &(max))) {\n",
-      "\t\tif (probes)\n",
-      "\t\t\tset_cpu(name == 0)\n",
-      "\t\t\tgoto out;\n",
-      "\t}\n",
-      "\n",
-      "\tpposs_unlock(*pefmask_plocks);\n",
-      "\taudit_log_lock_fuces(rq);\n",
-      "}\n",
-      "\n",
-      "static void again;\n",
-      "\n",
-      "int\n",
-      "con\n"
+      "/* .\n",
+      ";otåjs[y%dgVi;XZ[\n",
+      "}B+<%(t<$luM?Z8Fg%43_.F&`M>Ha;9Z`4)V;-ZXC*3:2zTe;ts{dbWR!9M3;&GRqGSz.4MR<t+kZpZ7J[yyd+a;{Z:d$KvGGd*tåF[osrt yw;#&\n",
+      "7GV<lålRTes_LO<CW=ge{ipj<M\n",
+      "<RyH-y3a!9! *9*[åG1Np3O5As=l<u_1å-$\n",
+      "g1?+yje<|J1_##VJdMdZ,;;$ZTeGå$y<*_M8HD$}RJ#;M(tRV.p%-*e4:7O.Gzyg%wGF#s1T%Lå1[:J%p.VV:*tl1d_wyhTpW%Myag#*3#V_2-y!$SsR}1V;j*%,x`<-kp$Z*$q'9_*Gta-p{0R%*wH3By[aZ 0_H,.mgVvtKZ$\\l< \n",
+      "H1J-pG,Z\\2r<%7å.$G0såi.,GgOgHå,z:,eKvyTt0je'M%N3{KSA0y#9åe_ksM,{_og*RgOZK%_Be-j7$\\~<[t tE#\teå-0ts9gd_:%#<dz9?G,ly:#{uVepj\t_K7be1 t I2dG0.<;g_-u_,:M3%_t1&Mk{1\n",
+      "d,Yåo09*$dJBBY%9g`q|,##a[M5X$. X3sy+SåT#;:<p*,9dZG;åzåGG1å_TT9%|0ps#y4{dS$-+;:e#g?:#g1V`t0Z(peaKps.TOl<RG|gF4j.=M?$]*.l1-Ku.TuF%2G+#Nyv\"KdN.<lKelVyoH__zMp_1Z,_<eåvpp+HdOgdd-:Td eO0BåGaJ$Z%,yygttye.G,åetGJug;\n",
+      "gOGZje<:,gk'*#SJsy%V+[å1å7åZ$u9J#ld%d1ho_-\"Ze~,yl{__}1U$-V0[p[Z__K,Ks%lZ-Z_{#}LgCs.d\n",
+      "G84H';sH*!1$;#,,#q9*+_9åd_37]3xs|.t.Ju;ep.J<lK_eg%p$bTe-RgptxZ'|eLw_,vT C--y;:R>:32;V Vq.mzGå1;|9b,B<L-=RGGb9$0Lånå_[Ru|-_y,#%på0g3:,;%$dgV9dl*?RX#Ghns9 $$e{%T[KFJ_yed=Ca-{ey$s\n"
      ]
     }
    ],
@@ -256,21 +219,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "pygments_lexer": "ipython3",
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
